--- a/ios/ArcoScribeApp/Info.plist
+++ b/ios/ArcoScribeApp/Info.plist
@@ -35,6 +35,10 @@
 	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs access to your microphone to record audio</string>
+	<key>UIBackgroundModes</key>
+    <array>
+		<string>audio</string>           <!-- keeps recorder running when app is backgrounded / screen locked -->
+    </array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Ionicons.ttf</string>
