--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.16.2",
@@ -19,6 +20,7 @@
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-audio-recorder-player": "^3.6.12",
+    "react-native-codegen": "^0.70.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.24.0",
@@ -29,6 +31,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-share": "^12.0.9",
+    "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
@@ -48,6 +51,7 @@
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
